docker: limit restart attempts to 3
This way we can avoid our Discord bot getting its AP token reset
because of too many connection attempts in a short amount of time.

Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -4,7 +4,12 @@ services:
   app:
     container_name: '{{ matterbridge_cont_name }}'
     image: '{{ matterbridge_cont_image }}'
-    restart: 'always'
+    deploy:
+      restart_policy:
+        condition: 'on-failure'
+        max_attempts: 3
+        delay: '10s'
+        window: '60s'
     volumes:
       - '{{ matterbridge_cont_vol }}/matterbridge.yaml:/matterbridge.yaml'
     command: |
