config: AutoWebhooks disables WebhookURL
Requries "Manage Webhooks" permission for bot account.

Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/templates/matterbridge.yaml.j2
+++ b/templates/matterbridge.yaml.j2
@@ -58,8 +58,10 @@ gateway:
 
       - account: "discord.{{ discord_srv.srv }}"
         channel: "{{ discord_srv.ch }}"
+        {% if not matterbridge_bridges['discord'][discord_srv.srv].get('AutoWebhooks', False) %}
         options:
           WebhookURL: "{{lookup("bitwarden", "Discord/"+discord_srv.srv+"/webhooks", field=discord_srv.ch)}}"
+        {% endif %}
     {% endfor %}
 
 {% endfor %}
