--- a/templates/matterbridge.yaml.j2
+++ b/templates/matterbridge.yaml.j2
@@ -58,10 +58,10 @@ gateway:
 
       - account: "discord.{{ discord_srv.srv }}"
         channel: "{{ discord_srv.ch }}"
-        {% if not matterbridge_bridges['discord'][discord_srv.srv].get('AutoWebhooks', False) %}
+        {% if not matterbridge_bridges['discord'][discord_srv.srv].get('AutoWebhooks', False) -%}
         options:
           WebhookURL: "{{lookup("bitwarden", "Discord/"+discord_srv.srv+"/webhooks", field=discord_srv.ch)}}"
-        {% endif %}
+        {%- endif %}
     {% endfor %}
 
 {% endfor %}
