docker: add conditional for environment section
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -10,10 +10,12 @@ services:
         max_attempts: 3
         delay: '10s'
         window: '60s'
+{% if matterbridge_cont_env %}
     environment:
 {% for key,val in matterbridge_cont_env.items() %}
       {{ key }}: '{{ val }}'
 {% endfor %}
+{% endif %}
     volumes:
       - '{{ matterbridge_cont_vol }}/data:/data'
       - '{{ matterbridge_cont_vol }}/config:/config:ro'
