--- a/templates/matterbridge.yaml.j2
+++ b/templates/matterbridge.yaml.j2
@@ -67,7 +67,7 @@ gateway:
 
       - account: "discord.{{ discord_srv.srv }}"
         channel: "{{ discord_srv.ch }}"
-        {% if not matterbridge_bridges['discord'][discord_srv.srv].get('AutoWebhooks', False) -%}
+        {% if not matterbridge_bridges['discord'][discord_srv.srv].get('AutoWebhooks', False) and discord_srv.get('webhook_url') -%}
         options:
           WebhookURL: "{{ discord_srv.webhook_url }}"
         {%- endif %}
