compose: add optional external Docker network support
- https://github.com/status-im/infra-misc/issues/458

--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -29,3 +29,11 @@ services:
     ports:
       - '{{ matterbridge_api_port }}:{{ matterbridge_api_port }}'
 {% endif %}
+{% if matterbridge_external_network %}
+    networks:
+      - {{ matterbridge_external_network }}
+
+networks:
+  {{ matterbridge_external_network }}:
+    external: true
+{% endif %}
