matterbridge: add Signal bridge support to gateway template
- Add signal account/channel to gateway inout config
- Allow custom gateway name via 'name' field in addition to 'status'

- https://github.com/status-im/infra-misc/issues/458

--- a/templates/matterbridge.yaml.j2
+++ b/templates/matterbridge.yaml.j2
@@ -34,7 +34,7 @@ gateway:
 
 {% endif %}
 {% for gtw in matterbridge_gateways %}
-  - name: "{{ gtw.status | default('bridge#'+(loop.index|string)) | mandatory }}"
+  - name: "{{ gtw.name | default(gtw.status | default('bridge#'+(loop.index|string))) }}"
     enable: "true"
     inout:
     {% if gtw.get("status", false) and not gtw.get("private", false) %}
@@ -57,6 +57,11 @@ gateway:
 
       - account: "telegram.autobot"
         channel: "{{ gtw.telegram }}"
+    {% endif %}
+    {% if gtw.get("signal", false) %}
+
+      - account: "signal.bridge"
+        channel: "{{ gtw.signal }}"
     {% endif %}
     {% for slack_srv in gtw.get("slack", []) %}
 
